fix: prevent wrapping of navbar items

--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -177,6 +177,7 @@
 .navbar .nav-item {
     display: flex;
     align-items: center;
+    white-space: nowrap;
 }
 
 .navbar-collapse .dropdown {
